@@ -1,3 +1,6 @@
+=== 2017-01-20
+* Enhancements
+  * Super called when factory method invoked with non Druid class
 === 2017-01-19
 * Enhancements
   * Added elements method to accessor so one can generate methods for generic collections of elements
